2009-07-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c: The "set view" command was incorrectly saved twice.
	Bug #2822433

2009-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* term/win.trm: Set the fillstyle belonging to a filled polygon.
	Unfortunately, the filled_poly code in wgraph.c then ignores this,
	but at least we tried.

	* src/win/wgraph.c: Handle negative line types correctly, including
	support for LT_BACKGROUND.
	Bug #1952287

	* src/gplt_x11.c: The previous state was not being properly restored
	after drawing a filled rectangle.

2009-07-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/win.trm (WIN_set_color) src/win/wgraph.c (drawgraph):
	Repair breakage of the set color mechanism.  term->set_color()
	should set the color simultaneously for pens, fill brushes, and
	text.  But no other line or fill properties should be affected.
	Fixes various reported bugs, including #2725599

2009-07-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_fillbox):  FS_DEFAULT should be treated as 
	"fill with current color" rather than "fill with background color".
	Bug #2819615

2009-07-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Repair incomplete initialization specs for default
	object properties.

2009-07-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c: The code was disabling all mousing and mouse events
	during multiplot.  This had the unfortunate side effect that window
	resizing and placement events were never acknowledged.  Also hotkeys
	would not work.  
	Bug #2812476

	* src/gadgets.h src/gadgets.h src/mouse.c (builtin_toggle_border)
	src/set.c:  The 'b' hotkey was a no-op in 2D plots, and lost the current
	user setting for both 2D and 3D plots. Change it to cycle the border
	setting between user / off / full / partial (3D only).

	* src/graphics.c (plot_boxes plot_c_bars do_rectangle do_key_sample):
	Remove the fill_corners() routine and instead call term->fillbox()