@@ -3,6 +3,10 @@
 	* src/save.c: The "set view" command was incorrectly saved twice.
 	Bug #2822433
 
+	* src/graphics.c (plot_image_or_update_axes): In image failsafe mode,
+	clip the individual rectangles (pixels) to the edge of the plot.
+	Bug #2820529
+
 2009-07-14  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/win.trm: Set the fillstyle belonging to a filled polygon.
